--- a/css/articleStyle.css
+++ b/css/articleStyle.css
@@ -77,6 +77,18 @@ body
     width:100%;
 }
 
+.empty
+{
+    color: inherit;
+    text-decoration:none!important;
+}
+
+.empty:hover
+{
+    color: inherit;
+    text-decoration:none!important;
+}
+
 @media screen and (min-width: 576px) 
 {
     #navLogo
