--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -129,6 +129,12 @@ body
     max-width: 100%;
 }
 
+.empty
+{
+    color: inherit;
+    text-decoration:none!important;
+}
+
 @media screen and (min-width: 576px) 
 {
     #navLogo
